tests/elab_fail/doLetLoop.lean.out.expected
doLetLoop.lean:6:0: error: unexpected end of input
doLetLoop.lean:5:2-5:8: error: unexpected `do` element syntax
  failed to pretty print term (use 'set_option pp.rawOnError true' for raw representation)
